--- a/Components/Pages/Notifications.razor
+++ b/Components/Pages/Notifications.razor
@@ -44,8 +44,8 @@
 else
 {
     <MudPaper Elevation="3" Class="p-4 rounded-lg" style="text-align:center;">
-        <MudIcon Icon="@Icons.Material.Filled.NotificationsOff" Color="Color.Secondary" Size="Size.Large" />
-        <MudText Typo="Typo.h6" class="mt-2">нет уведомлений</MudText>
+        <MudIcon Class="mt-4" Icon="@Icons.Material.Filled.NotificationsOff" Color="Color.Secondary" Size="Size.Large" />
+        <MudText Typo="Typo.h6" Class="mb-4 mt-2">Нет уведомлений</MudText>
     </MudPaper>
 }
 
