--- a/Components/Routes.razor
+++ b/Components/Routes.razor
@@ -1,6 +1,8 @@
 ﻿@using barberchainAPI.Components.Layout
 @using Microsoft.AspNetCore.Components.Authorization
 
+<MudThemeProvider />
+
 <Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
         <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(MainLayout)" />
